Removes support for flatbuffers. Adds some unit tests for Cap'n Proto (ignored until working across platforms).
Refs #73806